Redraw location bar background on native theme change

BUG=684161
R=pkasting@chromium.org

Review-Url: https://codereview.chromium.org/2657473002
Cr-Commit-Position: refs/heads/master@{#445576}

Former-commit-id: 8bcb019d9419ee1def31121dc66256f3eaa64c0f